# fwd-rs

./: .env  .gitignore  Cargo.toml  sqlx-data.json
sql/: schema.sql
src/: main.rs  models.rs
